---
source: test_support/src/lib.rs
---
# Heroku Node.js Engine

- Checking Node.js version
  - Detected Node.js version range: `>=14.0.0 <15.0.0-0`
  - Resolved Node.js version: `14.21.3`
- Installing Node.js distribution
  - Downloading Node.js `14.21.3 (<arch>)` from https://nodejs.org/download/release/v14.21.3/node-v14.21.3-<arch>.tar.gz ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `14.21.3 (<arch>)`
  - Installing Node.js `14.21.3 (<arch>)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)

# Heroku Node.js npm Install

- Installing node modules
  - Using npm version `6.14.18`
  - Creating npm cache
  - Configuring npm cache directory
  - Running `npm ci "--production=false"`

      added <NUMBER> packages in <time_elapsed>

  - Done (<time_elapsed>)
- Running scripts
  - Not running `heroku-prebuild` as it was disabled by a participating buildpack
  - Not running `build` as it was disabled by a participating buildpack
  - Not running `heroku-postbuild` as it was disabled by a participating buildpack
- Configuring default processes
  - Skipping default web process (no start script defined)
- Done (finished in <time_elapsed>)
